# hdsemg-pipe

./: .gitignore  README.md  environment-pypi.yml  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_notebook.ipynb  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coding_style_requirements_check.yml  deploy-docs.yml  publish_pypi.yml  release.yml
0.0.6.1/: 404.html  index.html  sitemap.xml
0.0.6.1/contributing/: index.html
0.0.6.1/developer/: index.html
0.0.6.1/installation/: index.html
0.0.6.2/: 404.html  index.html  sitemap.xml
0.0.6.2/contributing/: index.html
0.0.6.2/developer/: index.html
0.0.6.2/installation/: index.html
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/contributing/: index.html
0.1.0/developer/: index.html
0.1.0/installation/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/contributing/: index.html
0.1.1/developer/: index.html
0.1.1/installation/: index.html
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/contributing/: index.html
0.11.1/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  index.html  sitemap.xml
db_setup/: db_connector.py  init_db.py  requirements.txt
docs/: contributing.md  developer.md  index.md  installation.md
hdsemg_pipe/: MANIFEST.in  __main__.py  main.py  main_old.py  version.py
joss/: paper.bib  paper.md
latest/: 404.html  index.html  sitemap.xml
src/: hdsemg-pipe.spec  main.py  make_version.py  resources.qrc
tests/: test_file_grouping.py  test_reliability_thresholds.py
(+246 files in other folders)
