[project]
name = "hdsemg-pipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.15.1",
    "hdsemg-select>=0.2.0",
    "hdsemg-shared>=0.12.0",
    "matplotlib>=3.4.0",
    "mne>=1.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.5",
    "pefile>=2023.2.7; sys_platform != 'win32'",
    "pyqt5>=5.15",
    "pyqt5-tools>=5.15.9.3.3; sys_platform == 'win32'",
    "requests>=2.26.0",
    "scipy>=1.7.0",
    "torch>=1.10.0",
]
