[project]
name = "hdsemg-pipe"
dynamic = ["version"]
description = "hdsemg-pipe package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Johannes Kasser", email = "johanneskasser@outlook.de"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py>=3.15.1",
    "hdsemg-select>=0.2.0",
    "hdsemg-shared>=0.12.0",
    "matplotlib>=3.4.0",
    "mne>=1.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.5",
    "pefile>=2023.2.7; sys_platform != 'win32'",
    "pyqt5>=5.15",
    "pyqt5-tools>=5.15.9.3.3; sys_platform == 'win32'",
    "requests>=2.26.0",
    "scipy>=1.7.0",
    "torch>=1.10.0",
]

[project.scripts]
hdsemg-pipe = "hdsemg_pipe.main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
